<resources>
    <string name="app_name">Quiz Online</string>
    <string name="lb_username">Username</string>
    <string name="hint_username">Enter your username</string>
    <string name="lb_password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="label_btnLogin">Login</string>
    <string name="label_btnSignUp">Sign Up</string>
    <string name="lb_passwordConfirm">Confirm password</string>
    <string name="hint_passwordConfirm">Enter your password again</string>
    <string name="lb_name">Full Name</string>
    <string name="hint_name">Enter your full name</string>
    <string name="tv_welcome_to_quiz_online">Welcome to Quiz Online</string>

    <string name="label_listQuiz">List of Quiz</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back">Back</string>
    <string name="btn_edit_quiz">Edit Quiz</string>
    <string name="btn_delete_quiz">Delete Quiz</string>

    <!--activity_add - Begin-->
    <string name="tv_tmp_count_time">tmp Count Time</string>
    <!--activity_add - End-->

    <!--activity_student_home - Begin-->
    <string name="btn_ViewYourScore">View Your Score</string>
    <!--activity_student_home - End-->

    <!--activity_teacher_home - Begin-->
    <string name="btn_AddQuiz">Add Quiz</string>
    <!--activity_teacher_home - End-->

    <!--Add Quiz page - Begin-->
    <string name="tv_add_quiz_title">Add quiz</string>
    <string name="tv_teacher_email">Teacher email:</string>
    <string name="tv_tmp_email">abc@gmail.com</string>
    <string name="tv_subject_name">Subject name:</string>
    <string name="hint_subject_name">Enter quiz subject name</string>
    <string name="tv_quiz_name">Quiz name:</string>
    <string name="hint_quiz_name">Enter quiz name</string>
    <string name="tv_quiz_time">Quiz time (millisecond):</string>
    <string name="hint_quiz_time">Enter quiz time</string>
    <string name="tv_password">Password:</string>
    <string name="hint_quiz_password">Enter quiz password</string>
    <string name="tv_confirmPassword">Confirm password:</string>
    <string name="hint_quiz_confirmPassword">Re-enter quiz password</string>
    <string name="tv_list_of_question">List of Question:</string>
    <string name="btn_addQuiz">Add</string>
    <string name="btn_add_more_question">Add more question</string>
    <!--Add Quiz page - End-->

    <!--Quiz Check Password page - Begin-->
    <string name="btn_do_quiz">Do Quiz</string>
    <string name="hint_password_to_do_quiz">Enter this quiz password to do the test</string>
    <!--Quiz Check Password page - End-->

    <!--Quiz Result page - Begin-->
    <string name="tv_noCorrectAnswer">10/10 Correct Answer</string>
    <string name="btn_finish_and_close">Finish and Close</string>
    <string name="tv_quizScore">100/100 Point</string>
    <!--Quiz Result page - End-->    <!--Update Quiz page - Begin-->
    <string name="tv_update_quiz_title">Update Quiz</string>
    <string name="tv_old_password">Old password:</string>
    <string name="hint_quiz_old_password">Enter quiz old password</string>
    <string name="tv_new_password">New password (Optional):</string>
    <string name="hint_enter_quiz_new_password">Enter quiz new password</string>
    <string name="tv_confirm_new_password">Confirm new password:</string>
    <string name="hint_confirm_new_password">Re-enter quiz new password</string>
    <string name="btn_update">Update</string>
    <!--Update Quiz page - End-->

    <!--item_score_layout - Begin-->
    <string name="tv_no_of_correct">No of Correct:</string>
    <string name="tv_date">Date:</string>
    <string name="tv_tmp_quiz_name">tmp QuizName</string>
    <string name="tv_tmp_quiz_score">tmp 100/100</string>
    <string name="tv_tmp_do_quiz_date">tmp YYYY-MM-DD</string>
    <!--item_score_layout - End-->

    <!--list_item_quiz_admin - Begin-->
    <string name="tv_teacher_name">Teacher Name:</string>
    <string name="tv_tmp_teacher_name">tmp Teacher Name</string>
    <string name="tv_quiz_subject">Quiz Subject:</string>
    <string name="tv_tmp_quiz_subject">tmp Quiz Subject</string>
    <!--list_item_quiz_admin - End-->

    <!--item_question_create_layout - Begin-->
    <string name="tv_question">Question</string>
    <string name="hint_add_your_question">Add your question</string>
    <string name="txt_answer_a">Answer A</string>
    <string name="txt_answer_b">Answer B</string>
    <string name="txt_answer_c">Answer C</string>
    <string name="txt_answer_d">Answer D</string>
    <string name="hint_answer_a">Answer A</string>
    <string name="hint_answer_b">Answer B</string>
    <string name="hint_answer_c">Answer C</string>
    <string name="hint_answer_d">Answer D</string>
    <string name="tv_correct_answer">Correct Answer</string>
    <string name="txt_a">A</string>
    <string name="txt_b">B</string>
    <string name="txt_c">C</string>
    <string name="txt_d">D</string>
    <!--item_question_create_layout - End-->

    <!--activity_result - Begin-->
    <string name="tv_results_of_your_quizzes">Results of your quizzes</string>
    <!--activity_result - End-->

    <!--activity_quiz_check - Begin-->
    <string name="tv_quiz_password">Quiz Password</string>
    <string name="tv_enter_this_quiz_password_to_do_the_test">Enter this quiz password to do the test</string>
    <!--activity_quiz_check - End-->

    <!--item_question_layout - Begin-->
    <string name="tv_tmp_question">tmp_question</string>
    <string name="rb_tmp_answer">RadioButton</string>
    <!--item_question_layout - End-->
</resources>