<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_40"
        android:text="@string/label_btnSignUp"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_34" />

    <TextView
        android:id="@+id/tvUsername2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_username" />

    <EditText
        android:id="@+id/edtUsername2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:minHeight="@dimen/height_50" />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_password" />

    <EditText
        android:id="@+id/edtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="@dimen/height_50" />

    <TextView
        android:id="@+id/tvPassword4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_passwordConfirm" />

    <EditText
        android:id="@+id/edtConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_passwordConfirm"
        android:inputType="textPassword"
        android:minHeight="@dimen/height_50" />

    <TextView
        android:id="@+id/tvUsername4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_name" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:minHeight="@dimen/height_50" />

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btnSignUp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />

</LinearLayout>