<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:paddingTop="@dimen/padding_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:padding="@dimen/padding_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvQuizName2"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_quiz_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_20" />

                <TextView
                    android:id="@+id/tvScoreQuizName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tmp_quiz_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTeacherName2"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_teacher_name" />

                <TextView
                    android:id="@+id/tvUpdateTeacherName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tmp_teacher_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSubject2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_quiz_subject"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tmp_quiz_subject"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit_quiz" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete_quiz" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>