<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="144dp"
        android:layout_height="114dp"
        android:gravity="center"
		android:text="@string/tv_noCorrectAnswer"
        android:textSize="@dimen/textSize_34"/>
    	<TextView
        android:id="@+id/tvQuizScore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_tall"
        android:gravity="center"
        android:text="@string/tv_quizScore"
        android:textSize="@dimen/textSize_34"/>
		<Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/btn_finish_and_close"
        android:padding="@dimen/padding_10"/>
</LinearLayout>