<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_20"
    android:orientation="vertical"
    tools:context=".TeacherHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_150">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circle_indicator_3"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            app:ci_drawable="@drawable/bg_indicator_3"
            android:layout_margin="@dimen/margin_5"
            android:layout_height="@dimen/height_40"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/tv_welcome_to_quiz_online"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_20" />

    <Button
        android:id="@+id/btnLogout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout" />

    <Button
        android:id="@+id/btnUpdateQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_AddQuiz" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_10"
        android:text="@string/label_listQuiz" />

    <ListView
        android:id="@+id/lvQuiz2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>