<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:padding="@dimen/margin_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvQuizName2"
					android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="Quiz Name:"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tvScoreQuizName"
 					android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/tv_tmp_quiz_name"                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvSubject2"
					android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"					          android:text="@string/tv_quiz_score"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvScore"
					android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/tv_tmp_quiz_score"                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvDate2"
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="@string/tv_date"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/tv_tmp_do_quiz_date"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>